syntax = "proto3";

package webitel.chat.service.storage; 

service StorageService {
  rpc ProcessMessage(MessageRequest) returns (MessageResponse) {}
  rpc GetConversationBySessionID(ConversationRequest) returns (ConversationResponse) {}
}

message MessageRequest {
  string external_user_id = 1;
  string session_id = 2;
  string username = 3;
  string first_name = 4;
  string last_name = 5;
  string text = 6;
  uint64 profile_id = 7;
  string number = 8;
}

message MessageResponse {
  bool created = 1;
}

message ConversationRequest {
  string session_id = 1;
}

message ConversationResponse {
  int64 id = 1;
  int64 profile_id = 2;
  string title = 3;
  string session_id = 4;
  Profile profile = 5;
}

message Profile {
  int64 id = 1;
  string name = 2;
  string type = 3;
  int64 domain_id = 4;
}